# resonance-graph

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: __init__.py  audio.py  background_jobs.py  benchmark.py  captions.py  channel_pipeline.py  chunking.py  cli.py  config.py  errors.py  models.py  neo4j_store.py  ollama.py  pipeline.py  prompts.py  reranking.py  retrieval.py  roles.py  transcription.py  utils.py  web.py  worker.py  youtube.py
app/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  BENCHMARKING.md
evals/: example.yaml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: benchmark_ingestion_methods.py
tests/: test_benchmark.py  test_captions.py  test_channel.py  test_channel_pipeline.py  test_chunking.py  test_config.py  test_models.py  test_pipeline_fast_path.py  test_prompts.py  test_retrieval.py  test_roles.py  test_transcription_merge.py  test_web_progress.py  test_youtube.py
tests/fixtures/: youtube_info.json
