[project]
name = "resonance-graph"
version = "0.1.0"
description = "Local-first podcast and video GraphRAG with Neo4j, Ollama, and transcript citations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Daksh Malhan" }]
keywords = ["graphrag", "neo4j", "ollama", "rag", "youtube", "transcription"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "imageio-ffmpeg>=0.5.1",
  "neo4j>=5.20.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "typer>=0.12.3",
  "yt-dlp>=2024.5.27",
]

[project.optional-dependencies]
transcription = [
  "faster-whisper>=1.0.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
]

[project.scripts]
resonance = "app.cli:cli_app"
resonance-web = "app.web:main"
podcast-graphrag = "app.cli:cli_app"
podcast-graphrag-web = "app.web:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
